--- a/status/2024-01-18/2024-01-18 update.md
+++ b/status/2024-01-18/2024-01-18 update.md
@@ -6,22 +6,22 @@ _Got SDSS-V data_ — I got access to the sloan-25mlog mailing list, and I wrote
 
 _Explored much smaller latent spaces_ — I trained networks down to a latent dimensionality of 1. A summary of the training curves is shown below.
 
-train_curves.png
-loss_v_latent.png
+![Training curves, i.e. loss versus number of train steps.](train_curves.png)
+![Final loss versus latent size.](loss_v_latent.png)
 
 I'm really interested by the performance of $\ell = 2$, since it seems to cross some threshold that $\ell = 1$ can't, even though it can't perform quite as well as the higher dimensionalities.
 
 Here's a comparison of the reconstructions for different, small latent sizes on some randomly chosen examples.
 
-reco_1.png
-reco_2.png
-reco_3.png
-reco_4.png
+![Sample reconstructed image at various latent sizes.](reco_1.png)
+![Sample reconstructed image at various latent sizes.](reco_2.png)
+![Sample reconstructed image at various latent sizes.](reco_3.png)
+![Sample reconstructed image at various latent sizes.](reco_4.png)
 
 _Looked at the $\ell = 2$ latent space_ — Just a scatter plot of the embedding space reveals two large clusters, which correspond exactly to red or blue. I also plotted the scatter plots against a bunch of other quantities, but didn't see any super clear correlations. As a summary of those exercises, I plotted the Pearson correlation coefficient between each metadata column and each latent dimension.
 
-latent_scatter.png
-pearson.png
+![Scatter plot of embeddings (latent space) for test images.](latent_scatter.png)
+![Pearson correlation coefficients for embeddings with various metadata quantities.](pearson.png)
 
 *Learned the $\ell = 2$ latent space* — Since we're able to produce decent reconstructions with $\ell = 2$ and it seems like there might be exploitable correlations there, I decided to try predictive modeling with the embeddings. To start simple, I just used linear regression where the inputs are ~25 metadata variables and the outputs are the 2D embeddings.(No reference arc images/embeddings/metadata, like we talked about doing.) Since the model outputs predicted embeddings, I then put those through the decoder to produce predicted arc images.
 
@@ -36,10 +36,10 @@ So, we're not doing _great_, but the performance here generalizes from train to 
 
 Here's some sample images from the test set.
 
-test_1.png
-test_2.png
-test_3.png
-test_4.png
+![Sample reconstructed and predicted image with latent size 2.](test_1.png)
+![Sample reconstructed and predicted image with latent size 2.](test_2.png)
+![Sample reconstructed and predicted image with latent size 2.](test_3.png)
+![Sample reconstructed and predicted image with latent size 2.](test_4.png)
 
 ("Reconstructed" means just run through the autoencoder. "Predicted" means embedding predicted from metadata and decoded into image.)
 
