add an little addendum

--- a/status/2024-01-18/2024-01-18 update.md
+++ b/status/2024-01-18/2024-01-18 update.md
@@ -51,3 +51,10 @@ I'm trying to decide what to focus on next. Should I...
 - download more data and keep training?
 - mess with autoencoder architecture to try to improve low-dim embeddings?
 - something else?
+
+_Update after discussions with Hogg, Blanton_
+
+Some known issues that I'm working on fixing:
+- Training on images from cameras at once is a bad idea; training separate models for each camera allows us to learn each camera's latent calibration state, which makes more sense.
+- The current data preprocessing pipeline places a cut on the max pixel value, which I've been told is a terrible idea and throws away important data. I'm working on replacing the data calibration pipeline with one that does _not_ do this.
+
